--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "project_seed",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "Project Seed",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -13,14 +13,19 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
+  "authors": "Rahat Chowdhury, Beth Sergeant, Ashraful Mallik, Jason Zheng ",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "apollo-boost": "^0.3.1",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "gitstar-components": "^1.0.5",
+    "graphql": "^14.1.1",
+    "if-env": "^1.0.4",
+    "react-apollo": "^2.1.0-rc.3",
+    "unfetch": "^4.1.0"
   }
 }
