--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql": "^14.1.1",
     "if-env": "^1.0.4",
     "react-apollo": "^2.1.0-rc.3",
+    "react-router-dom": "^5.0.0",
     "unfetch": "^4.1.0"
   }
 }
